adjusted tooltip areas on mobile. Need to fix on desktop. Need to fix autoplay / fullscreen issue on mobile

--- a/AZBHOMEstyles.css
+++ b/AZBHOMEstyles.css
@@ -752,36 +752,36 @@ img {
 /*CLICKABLE AREAS FOR MOBILE VIEW*/
 #tooltip-area1 {
   position: absolute;
-  top: 6%;
-  left: 12%;
-  width: 15%;
-  height: 8%;
+  top: 29%;
+  left: 15%;
+  width: 12%;
+  height: 14%;
   cursor: pointer;
 }
 
 #tooltip-area2 {
   position: absolute;
-  top: 9%;
-  left: 35%;
-  width: 15%;
-  height: 8%;
+  top: 29%;
+  left: 57%;
+  width: 10%;
+  height: 14%;
   cursor: pointer;
 }
 
 #tooltip-area3 {
   position: absolute;
-  top: 10%;
-  left: 59%;
-  width: 15%;
-  height: 8%;
+  top: 31%;
+  left: 72%;
+  width: 12%;
+  height: 10%;
   cursor: pointer;
 }
 
 #tooltip-area4 {
   position: absolute;
-  top: 13%;
-  left: 79%;
-  width: 12%;
+  top: 33%;
+  left: 39%;
+  width: 14%;
   height: 8%;
   cursor: pointer;
 }
